Исправлен неверный рефакторинг, предложенный Fleet